docs: restructure documentation with modular layout
- Refactor README to concise quick-start guide with doc links
- Add comprehensive docs: installation, providers, configuration,
  api-reference, docker, service-management, troubleshooting
- Add integrations guide for Cursor, VS Code, Aider, LangChain, etc.
- Move cline-integration.md to docs/integrations/cline.md
- Remove outdated docs: amp-cli-integration, sdk-* (internal)
- Update .gitignore to track docs/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,8 @@ refs/*
 auths/*
 !auths/.gitkeep
 
-# Documentation
-docs/*
-!docs/cline-integration.md
+# Documentation (generated/private only)
+# docs/ is now tracked - contains public documentation
 AGENTS.md
 CLAUDE.md
 GEMINI.md
